@@ -1859,6 +1859,7 @@
 #define IDS_SAB_QUERY_AUTOSEGMENT_EXISTING_DATA 61334
 #define IDS_SAB_QUERY_AUTOPARSE         61335
 #define IDS_SAB_QUERY_AUTOSEGMENT       61335
+#define IDS_ERROR_CANT_READ_WAVE_FILE         61336
 #define IDS_ERROR_GENERATE_CV_TONE      61351
 #define IDS_ERROR_GENERATE_CV_NOPITCH   61352
 #define IDS_ERROR_AUTO_PARSE            61353
